# sonobouy

./: requirements.txt  setup.cfg  setup.py
sonobouy/: assertions_base.py  main.py
sonobouy/assertions/: packages_dnf.py
