[metadata]
name = sonobouy
summary = A tool for measuring instance compliance to policy
license = Apache2
description-file = README.md
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://madebymikal.com/sonobouy
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    sonobouy

[entry_points]
console_scripts =
    sonobouy = sonobouy.main:cli

[pbr]
skip_changelog = True
